  packet including capturing groups for relevant fields a textfile can be converted to a libcap capture file. Supported data
  encodings are plain-hexadecimal, -octal, -binary and base64.
  Also the timestamp format now allows the second-fractions to be placed anywhere in the timestamp and it will be stored with
  nanosecond instead of microsecond precision.

* Significant RTP Player redesign and improvements (see Wireshark User Documentation,
  https://www.wireshark.org/docs/wsug_html_chunked/ChTelPlayingCalls.html[Playing VoIP Calls] and
  https://www.wireshark.org/docs/wsug_html_chunked/_rtp.html#ChTelRtpPlayer[RTP Player Window])
** RTP Player can play many streams in row
** UI is more responsive
** RTP Player maintains playlist, other tools can add/remove streams to it
** Every stream can be muted or routed to L/R channel for replay
** Save audio is moved from RTP Analysis to RTP Player. RTP Player saves what was played. RTP Player can save in multichannel .au or .wav.
** RTP Player added to menu Telephony>RTP>RTP Player

* VoIP dialogs (VoIP Calls, RTP Streams, RTP Analysis, RTP Player, SIP Flows) are non-modal, can stay opened on background
** Same tools are provided acros all dialogs (Prepare Filter, Analyse, RTP Player ...)

* Follow stream is now able to follow SIP call by SIP.Call-ID

* Follow stream YAML output format’s has been changed to add timestamps and peers information (for more details see the user’s guide,
{wireshark-users-guide-url}/ChAdvFollowStreamSection.html[Following Protocol Streams])

* IP fragments between public IPv4 addresses are now reassembled even if they have different VLAN IDs. Reassembly of IP fragments
  where one endpoint is a private (RFC 1918 section 3) or link-local (RFC 3927) IPv4 address continues to take the VLAN ID into
  account, as those addresses can be reused. To revert to the previous behavior and not reassemble fragments with different VLAN IDs,