@@ -50,6 +50,7 @@ typedef struct {
 typedef struct {
 	dfwork_t *dfw;
 	GString* quoted_string;
+	gboolean raw_string;
 	gboolean in_set;	/* true if parsing set elements for the membership operator */
 } df_scanner_state_t;
 
